Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#110 closed bug (fixed)

StyledEdit doesn't save a file successfully on Haiku

Reported by: korli Owned by: axeld
Priority: normal Milestone: R1
Component: System/Kernel Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

StyledEdit on Haiku doesn't save with success a file: launch "StyledEdit ~/config/settings/kernel/drivers/kernel" make some changes and save. launch again : no changes saved.

As it happens only on Haiku, it could be related to storage kit or kernel side.

Change History (17)

comment:1 by jackburton, 19 years ago

Works well, instead, with a file created with StyledEdit itself.

comment:2 by korli, 19 years ago

Maybe add status check on calls of status_t StyledEditWindow::Save(BMessage *message) as it must return silently an error somehow. Then something could be wrong in storage kit, who knows ...

comment:3 by korli, 19 years ago

Status: newassigned

comment:4 by korli, 19 years ago

Owner: changed from sikosis to jackburton

comment:5 by korli, 19 years ago

Another weird testcase: cp config/settings/kernel/drivers/kernel ./ head kernel StyledEdit kernel => modifies a comment at the top of the file then quits with saving head kernel

The file is empty, though filesize isn't zero. Then "StyledEdit kernel" shows bad data.

comment:6 by daneel@…, 19 years ago

Can be a problem with SYNC ?

comment:7 by jackburton, 19 years ago

I can't reproduce. Maybe your image/partition is corrupt ?

comment:8 by korli, 19 years ago

I tried again with http://www.schmidp.com/public/haiku/images/rev16260_raw.tar. bz2 in QEmu and it actually failed often but not everytime. Could be a cache or fs problem after all.

comment:9 by jackburton, 19 years ago

Reassigning, as it's most probably a kernel/FS problem

comment:10 by jackburton, 19 years ago

Component: ApplicationsKernel

comment:11 by jackburton, 19 years ago

Owner: changed from jackburton to axeld

comment:12 by jackburton, 19 years ago

Status: assignednew

comment:13 by axeld, 19 years ago

Can someone still reproduce this one with a release after 16557?

comment:14 by axeld, 19 years ago

Fixed in hrev16613. vm_cache_resize() didn't always work correctly.

comment:15 by axeld, 19 years ago

Status: newclosed

comment:16 by axeld, 19 years ago

Resolution: fixed

comment:17 by korli, 19 years ago

Tested ok, thanks!

Note: See TracTickets for help on using tickets.