vm_cache_resize() could remove one page too many, and thus eventually free a modified page that mustn't be removed. This fixes bug #110.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16613 a95241bf-73f2-0310-859d-f6bbb57e9c96